feat: Complete PostgreSQL migration and environment optimization
- Migrate database from SQLite to PostgreSQL with full data migration
- Implement secure environment variable configuration (no hardcoded values)
- Add comprehensive PostgreSQL setup and validation tools
- Create streamlined run scripts (run.sh, run_dev.sh, run_prod.sh)
- Add system dependencies installer (install_system_deps.sh)
- Integrate analytics dependencies (pandas, numpy, python-magic)
- Clean up unused imports across codebase
- Consolidate documentation into COMPLETE_ENVIRONMENT_GUIDE.md
- Remove verbose output and emojis from scripts for professional appearance
- Add environment validation and security checks
- Update README with new PostgreSQL setup and script usage
- Remove startup banners for cleaner application output

Breaking Changes:
- Database now requires PostgreSQL instead of SQLite
- All configuration must be provided via environment variables
- Run scripts moved to scripts/ directory

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ pydantic-settings==2.1.0
 # Database
 sqlalchemy==2.0.23
 alembic==1.13.1
+psycopg2-binary==2.9.9
+asyncpg==0.29.0
 
 # Authentication & Security
 python-jose[cryptography]==3.3.0
@@ -24,3 +26,8 @@ pytest-asyncio==0.21.1
 
 # Logging
 loguru==0.7.2
+
+# Analytics & Data Processing
+pandas==2.1.4
+numpy==1.24.3
+python-magic==0.4.27  # Requires: brew install libmagic (macOS) or apt-get install libmagic1-dev (Ubuntu)
