--- a/env.example
+++ b/env.example
@@ -1,6 +1,13 @@
 # Database Configuration
-DATABASE_URL=sqlite:///./data/forenlytic.db
+DATABASE_URL=postgresql://postgres:password@localhost:5432/name_database
 DATABASE_ECHO=False
+
+# PostgreSQL Configuration
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
+POSTGRES_DB=name_database
 
 # Security
 SECRET_KEY=your-secret-key-here-change-in-production
