refactor(api): restructure authentication & case management modules
- Removed legacy API files (auth.py, cases.py) and old docs/examples
- Added new structured modules under app/api/authentication and app/api/case_management
- Updated documentation with new API docs (AUTHENTICATION_API_DOCUMENTATION.md, CASE_MANAGEMENT_API_DOCUMENTATION.md, FRONTEND_ENDPOINTS_SUMMARY.md)
- Modified backend core, tools, scripts, and tests to align with new API structure
- Cleaned up obsolete frontend example files and outdated docs

--- a/env.example
+++ b/env.example
@@ -26,11 +26,11 @@ ENCRYPTION_ALGORITHM=AES-256-GCM
 
 # Logging
 LOG_LEVEL=INFO
-LOG_FILE=./logs/forenlytic.log
+LOG_FILE=./logs/Digital Forensics.log
 
 # API Configuration
 API_V1_STR=/api/v1
-PROJECT_NAME=Forenlytic
+PROJECT_NAME=Digital Forensics
 VERSION=1.0.0
 
 # Development
