chore: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -82,9 +82,6 @@ docs/_build/
 *.temp
 
 # FastAPI specific
-.pytest_cache/
-.coverage
-htmlcov/
 .tox/
 .cache
 nosetests.xml
@@ -145,20 +142,9 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-# PyCharm
-.idea/
-
-# VS Code
-.vscode/
-
 # Sublime Text
 *.sublime-project
 *.sublime-workspace
-
-# Vim
-*.swp
-*.swo
-*~
 
 # Emacs
 *~
@@ -211,7 +197,7 @@ $RECYCLE.BIN/
 .Trash-*
 .nfs*
 
-# Security
+# Security & Keys
 *.pem
 *.key
 *.crt
@@ -219,6 +205,11 @@ $RECYCLE.BIN/
 *.pfx
 secrets/
 .secrets/
+keys/
+*.rsa
+*.dsa
+*.ed25519
+*.ecdsa
 
 # Application specific
 uploads/
