--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,92 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
+aiofiles==23.2.1
 alembic==1.12.1
-
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-
+amqp==5.3.1
+annotated-types==0.7.0
+anyio==3.7.1
+bcrypt==5.0.0
+billiard==4.2.2
+black==23.11.0
+celery==5.3.4
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+coverage==7.11.0
+cryptography==46.0.2
+dnspython==2.8.0
+ecdsa==0.19.1
+email-validator==2.1.0
+environs==14.3.0
+et_xmlfile==2.0.0
+fastapi==0.104.1
+fastapi_cors==0.0.6
+flake8==6.1.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.25.2
+idna==3.11
+iniconfig==2.3.0
+isort==5.12.0
+kombu==5.5.4
+Mako==1.3.10
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+marshmallow==4.0.1
+mccabe==0.7.0
+mdurl==0.1.2
+mypy==1.7.1
+mypy_extensions==1.1.0
+numpy==2.3.4
+openpyxl==3.1.5
+packaging==25.0
+pandas==2.3.3
+passlib==1.7.4
+pathspec==0.12.1
+Pillow==10.1.0
+platformdirs==4.5.0
+pluggy==1.6.0
+prometheus-client==0.19.0
+prompt_toolkit==3.0.52
+psycopg2-binary==2.9.9
+pyasn1==0.6.1
+pycodestyle==2.11.1
+pycparser==2.23
 pydantic==2.5.0
 pydantic-settings==2.1.0
-email-validator==2.1.0
-
-httpx==0.25.2
-requests==2.31.0
-
-python-magic==0.4.27
-Pillow==10.1.0
-
-reportlab==4.0.7
-
-python-dateutil==2.8.2
-pytz==2023.3
-
-structlog==23.2.0
-
+pydantic_core==2.14.1
+pyflakes==3.1.0
+Pygments==2.19.2
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
-httpx==0.25.2
-
-black==23.11.0
-isort==5.12.0
-flake8==6.1.0
-mypy==1.7.1
-
+python-dateutil==2.8.2
 python-dotenv==1.0.0
-
-fastapi-cors==0.0.6
-
-celery==5.3.4
+python-jose==3.3.0
+python-magic==0.4.27
+python-multipart==0.0.6
+pytz==2023.3
+PyYAML==6.0.3
 redis==5.0.1
-
-aiofiles==23.2.1
-
-prometheus-client==0.19.0
-
-click==8.1.7
+reportlab==4.0.7
+requests==2.31.0
 rich==13.7.0
-
-openpyxl==3.1.5
-pandas==2.3.3
-cryptography==46.0.2
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.23
+starlette==0.27.0
+structlog==23.2.0
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+uvicorn==0.24.0
+uvloop==0.22.1
+vine==5.1.0
+watchfiles==1.1.1
+wcwidth==0.2.14
+websockets==15.0.1
+xlrd==2.0.2
