feat(analytics): enhance social media parsing and workflow integration
- Updated device management models for social media correlation
- Improved contact, hashfile, and social media parsers
- Enhanced upload pipeline for better data handling
- Added new migration script: migrate_social_media_fields.py
- Updated analytics_social_media_routes for new API endpoints
- Adjusted run_analytics_workflow.py for improved workflow execution
- Updated .gitignore for better environment handling

--- a/.gitignore
+++ b/.gitignore
@@ -225,4 +225,4 @@ sample_hashfile
 sample_file# Sample files (too large for GitHub)
 sample_file/
 sample_data/
-sample_social_media/
+sample_social_mediaa/
