--- a/requirements.txt
+++ b/requirements.txt
@@ -15,33 +15,40 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
 cryptography==46.0.3
+dnspython==2.8.0
 ecdsa==0.19.1
+email_validator==2.2.0
+environs==14.5.0
 et_xmlfile==2.0.0
 fastapi==0.120.4
-fastapi-cors==0.0.6
+fastapi_cors==0.0.6
 flake8==6.1.0
 h11==0.16.0
 idna==3.11
 kombu==5.5.4
 Mako==1.3.10
 MarkupSafe==3.0.3
+marshmallow==4.1.0
+mccabe==0.7.0
 numpy==2.3.4
 openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.3
-pillow==12.0.0
-prometheus_client==0.23.1
-passlib[bcrypt]==1.7.4
+passlib==1.7.4
 pathspec==0.12.1
+pillow==12.0.0
 platformdirs==4.5.0
 pluggy==1.6.0
+prometheus_client==0.23.1
 prompt_toolkit==3.0.52
 psycopg2-binary==2.9.11
 pyasn1==0.6.1
+pycodestyle==2.11.1
 pycparser==2.23
 pydantic==2.12.3
 pydantic-settings==2.11.0
 pydantic_core==2.41.4
+pyflakes==3.1.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 python-jose==3.5.0
