--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ Mako==1.3.10
 MarkupSafe==3.0.3
 marshmallow==4.1.0
 mccabe==0.7.0
-numpy==2.3.4
+numpy==2.2.6
 openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.3
@@ -75,3 +75,4 @@ watchfiles==1.1.1
 wcwidth==0.2.14
 websockets==15.0.1
 xlrd==2.0.2
+pydantic==2.12.3
