--- a/digifor-v2.service
+++ b/digifor-v2.service
@@ -10,6 +10,7 @@ Group=digifor
 WorkingDirectory=/home/digifor/digifor-v2
 Environment="PATH=/home/digifor/digifor-v2/venv/bin:/usr/local/bin:/usr/bin:/bin"
 EnvironmentFile=/home/digifor/digifor-v2/.env
+ExecStartPre=/home/digifor/digifor-v2/venv/bin/python3 -m app.auth.seed
 ExecStart=/bin/bash /home/digifor/digifor-v2/start-service.sh
 Restart=always
 RestartSec=10
