--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,8 @@ data/apks/apk/*
 !data/uploads/.gitkeep
 !data/analysis/.gitkeep
 !data/reports/.gitkeep
+data/.gitkeep
+data/**/.gitkeep
 
 # IDE
 .vscode/
