--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ amqp==5.3.1
 annotated-doc==0.0.3
 annotated-types==0.7.0
 anyio==4.11.0
+async-timeout==5.0.1
+backports-datetime-fromisoformat==2.0.3
 bcrypt==3.2.2
 billiard==4.2.2
 celery==5.5.3
@@ -20,11 +22,14 @@ ecdsa==0.19.1
 email_validator==2.2.0
 environs==14.5.0
 et_xmlfile==2.0.0
+exceptiongroup==1.3.0
 fastapi==0.120.4
 fastapi_cors==0.0.6
 flake8==6.1.0
+greenlet==3.2.4
 h11==0.16.0
 idna==3.11
+iniconfig==2.3.0
 kombu==5.5.4
 Mako==1.3.10
 MarkupSafe==3.0.3
@@ -49,6 +54,8 @@ pydantic==2.12.3
 pydantic-settings==2.11.0
 pydantic_core==2.41.4
 pyflakes==3.1.0
+Pygments==2.19.2
+pytest==8.4.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 python-jose==3.5.0
@@ -64,6 +71,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.44
 starlette==0.49.3
 structlog==25.5.0
+tomli==2.3.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
@@ -75,4 +83,3 @@ watchfiles==1.1.1
 wcwidth==0.2.14
 websockets==15.0.1
 xlrd==2.0.2
-pydantic==2.12.3
