--- a/requirements.txt
+++ b/requirements.txt
@@ -58,6 +58,7 @@ python-jose==3.5.0
 python-magic==0.4.27
 python-multipart==0.0.20
 pytz==2025.2
+pypdf==5.1.0
 redis==7.0.1
 reportlab==4.4.4
 requests==2.32.5
