Update: perbaikan konfigurasi PDF export, penyesuaian env dan .gitignore

--- a/env.example
+++ b/env.example
@@ -18,6 +18,7 @@ ACCESS_TOKEN_EXPIRE_MINUTES=1440
 UPLOAD_DIR=./data/uploads
 ANALYSIS_DIR=./data/analysis
 REPORTS_DIR=./data/reports
+LOGO_PATH=./assets/logo.png
 MAX_FILE_SIZE=104857600  # 100MB
 
 # Encryption
