--- a/env.example
+++ b/env.example
@@ -33,6 +33,8 @@ LOG_FILE=./logs/Digital Forensics.log
 API_V1_STR=/api/v1
 PROJECT_NAME=Digital Forensics
 VERSION=1.0.0
+SERVER_IP=
+API_BASE_URL=http://localhost:8000
 
 # Development
 DEBUG=True
@@ -42,3 +44,6 @@ CORS_ORIGINS=["http://localhost:3000", "http://localhost:8080"]
 ANALYTICS_BATCH_SIZE=1000
 HASH_ALGORITHMS=["md5", "sha1", "sha256"]
 MAX_ANALYSIS_THREADS=4
+
+# MobSF Configuration
+MOBSF_URL=http://172.15.2.105:5001
