--- a/requirements.txt
+++ b/requirements.txt
@@ -73,7 +73,7 @@ typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.38.0
-uvloop==0.22.1
+#uvloop==0.22.1
 vine==5.1.0
 watchfiles==1.1.1
 wcwidth==0.2.14
