--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,15 @@
 services:
   db:
     image: postgres:16
-    container_name: digifor-db
-    restart: always
     environment:
       POSTGRES_USER: digifordb
       POSTGRES_PASSWORD: Grz6ayTrBXPnFkwL
       POSTGRES_DB: digifor
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U digifordb -d digifor"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     ports:
       - "5432:5432"
     volumes:
@@ -14,29 +17,20 @@ services:
 
   app:
     build: .
-    container_name: digifor-app
-    restart: always
     env_file: .env
     ports:
       - "8000:8000"
     depends_on:
-      - db
-
-  migrate:
-    build: .
-    container_name: digifor-migrate
-    depends_on:
-      - db
-    command: bash -c "dockerize -wait tcp://db:5432 -timeout 30s && alembic upgrade head"
+      db:
+        condition: service_healthy
 
   seed:
     build: .
-    container_name: digifor-seed
-    restart: "no"
     depends_on:
-      - migrate
-    command: bash -c "dockerize -wait tcp://db:5432 -timeout 30s && python -m app.auth.seed"
-
+      app:
+        condition: service_started
+    command: python -m app.auth.seed
+    restart: "no"
 
 volumes:
   postgres_data:
