--- a/env.example
+++ b/env.example
@@ -1,49 +1,41 @@
-# Database Configuration
-DATABASE_URL=postgresql://postgres:password@localhost:5432/name_database
+DATABASE_URL=postgresql://digifordb:Grz6ayTrBXPnFkwL@localhost:5432/digifor
 DATABASE_ECHO=False
 
-# PostgreSQL Configuration
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=password
-POSTGRES_DB=name_database
+POSTGRES_USER=digifordb
+POSTGRES_PASSWORD=Grz6ayTrBXPnFkwL
+POSTGRES_DB=digifor
 
-# Security
+SERVER_IP=
+API_BASE_URL=http://localhost:8000
+
+MOBSF_URL=http://localhost:5001
+
 SECRET_KEY=your-secret-key-here-change-in-production
 ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=1440
+ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# File Storage
 UPLOAD_DIR=./data/uploads
 ANALYSIS_DIR=./data/analysis
 REPORTS_DIR=./data/reports
 LOGO_PATH=./assets/logo.png
-MAX_FILE_SIZE=104857600  # 100MB
+MAX_FILE_SIZE=104857600
 
-# Encryption
 ENCRYPTION_KEY=your-encryption-key-here-32-chars
 ENCRYPTION_ALGORITHM=AES-256-GCM
 
-# Logging
 LOG_LEVEL=INFO
 LOG_FILE=./logs/Digital Forensics.log
 
-# API Configuration
 API_V1_STR=/api/v1
 PROJECT_NAME=Digital Forensics
 VERSION=1.0.0
-SERVER_IP=
-API_BASE_URL=http://localhost:8000
 
-# Development
 DEBUG=True
 CORS_ORIGINS=["http://localhost:3000", "http://localhost:8080"]
 
-# Big Data Analytics
 ANALYTICS_BATCH_SIZE=1000
 HASH_ALGORITHMS=["md5", "sha1", "sha256"]
 MAX_ANALYSIS_THREADS=4
 
-# MobSF Configuration
-MOBSF_URL=http://172.15.2.105:5001
