--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
-DATABASE_URL=postgresql://digifordb:Grz6ayTrBXPnFkwL@localhost:5432/digifor
+DATABASE_URL=postgresql://digifordb:Grz6ayTrBXPnFkwL@digiforapp:5432/digifor
 DATABASE_ECHO=False
 
-POSTGRES_HOST=localhost
+POSTGRES_HOST=digiforapp
 POSTGRES_PORT=5432
 POSTGRES_USER=digifordb
 POSTGRES_PASSWORD=Grz6ayTrBXPnFkwL
