--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://digifordb:Grz6ayTrBXPnFkwL@digiforapp:5432/digifor
+DATABASE_URL=postgresql+psycopg2://digifordb:Grz6ayTrBXPnFkwL@digiforapp:5432/digifor
 DATABASE_ECHO=False
 
 POSTGRES_HOST=digiforapp
@@ -7,35 +7,44 @@ POSTGRES_USER=digifordb
 POSTGRES_PASSWORD=Grz6ayTrBXPnFkwL
 POSTGRES_DB=digifor
 
+
+# === SERVER ===
 SERVER_IP=
 API_BASE_URL=http://localhost:8000
 
+# === MOBSF ===
 MOBSF_URL=http://localhost:5001
 
+# === SECURITY ===
 SECRET_KEY=your-secret-key-here-change-in-production
 ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
+ACCESS_TOKEN_EXPIRE_MINUTES=1440
 
+# === PATHS ===
 UPLOAD_DIR=./data/uploads
 ANALYSIS_DIR=./data/analysis
 REPORTS_DIR=./data/reports
 LOGO_PATH=./assets/logo.png
 MAX_FILE_SIZE=104857600
 
+# === ENCRYPTION ===
 ENCRYPTION_KEY=your-encryption-key-here-32-chars
 ENCRYPTION_ALGORITHM=AES-256-GCM
 
+# === LOGGING ===
 LOG_LEVEL=INFO
 LOG_FILE=./logs/Digital Forensics.log
 
+# === API ===
 API_V1_STR=/api/v1
 PROJECT_NAME=Digital Forensics
 VERSION=1.0.0
 
+# === SETTINGS ===
 DEBUG=True
 CORS_ORIGINS=["http://localhost:3000", "http://localhost:8080"]
 
+# === ANALYTICS ===
 ANALYTICS_BATCH_SIZE=1000
 HASH_ALGORITHMS=["md5", "sha1", "sha256"]
 MAX_ANALYSIS_THREADS=4
-
