--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
-version: '3.9'
-
 services:
   app:
     build: .
     env_file: .env
     ports:
       - "8000:8000"
-    restart: "no"
+    restart: always
     networks:
       - digifor-network
 
@@ -15,7 +13,7 @@ services:
     depends_on:
       - app
     command: ["python", "-m", "app.auth.seed"]
-    restart: "no"
+    restart: always
     networks:
       - digifor-network
 
