Update PDF export formatting for case and suspect details
- Update case details PDF: logo size, font sizes, colors, and spacing
- Update suspect details PDF: logo size, font sizes, colors, and spacing
- Fix Person of Interest subtitle duplication and page break logic
- Update .gitignore to exclude app/data directories
- Update docker-compose.yml and env.example

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,12 @@ data/apks/apk/*
 data/.gitkeep
 data/**/.gitkeep
 
+# App Data Directories
+app/data/uploads/
+app/data/reports/
+app/data/evidence/
+app/data/analysis/
+
 # IDE
 .vscode/
 .cursor/
