Fix import paths and update configuration
- Fix import paths: app.config -> app.core.config, app.database -> app.db.session
- Fix import paths: app.utils.logging -> app.core.logging
- Update settings attributes to uppercase (DEBUG, LOG_LEVEL, DATABASE_URL, etc.)
- Fix model imports: use correct module paths (case_management, evidence_management, suspect_management)
- Remove non-existent models (Investigator, Person, CasePerson, EvidenceStatus)
- Update sample data script to use correct model structure
- Update all tools and scripts to use correct import paths
- Update documentation files

--- a/env.example
+++ b/env.example
@@ -8,7 +8,7 @@ POSTGRES_PASSWORD=Grz6ayTrBXPnFkwL
 POSTGRES_DB=digifor
 
 SERVER_IP=
-API_BASE_URL=http://localhost:8000
+API_BASE_URL=http://172.15.2.105
 
 MOBSF_URL=http://localhost:5001
 
