Remove EvidenceType table and add source/evidence_type fields to Evidence model
- Remove EvidenceType table and evidence_type_id ForeignKey
- Add source (String) and evidence_type (String) fields to Evidence model
- Update create_evidence endpoint: remove type parameter, only source is accepted
- Update update_evidence endpoint: support type parameter for evidence_type
- Update all API routes and schemas to use new fields
- Update PDF export to use source and evidence_type
- Add migration script to remove evidence_types table and add new fields
- Update documentation in new_case_api_contract.md
- Fix imports in tools and alembic files

--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
-DATABASE_URL=postgresql+psycopg2://digifordb:Grz6ayTrBXPnFkwL@digiforapp:5432/digifor
+DATABASE_URL=postgresql+psycopg2://digifordb:Grz6ayTrBXPnFkwL@localhost:5432/digifor
 DATABASE_ECHO=False
 
-POSTGRES_HOST=172.15.2.105
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=digifordb
 POSTGRES_PASSWORD=Grz6ayTrBXPnFkwL
