--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ annotated-types==0.7.0
 anyio==4.11.0
 bcrypt==3.2.2
 billiard==4.2.2
+brotli==1.2.0
 celery==5.5.3
 certifi==2025.10.5
 cffi==2.0.0
@@ -15,6 +16,7 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
 cryptography==46.0.3
+cssselect2==0.8.0
 dnspython==2.8.0
 ecdsa==0.19.1
 email_validator==2.2.0
@@ -23,7 +25,9 @@ et_xmlfile==2.0.0
 fastapi==0.120.4
 fastapi_cors==0.0.6
 flake8==6.1.0
+fonttools==4.60.1
 h11==0.16.0
+html5lib==1.1
 idna==3.11
 iniconfig==2.3.0
 kombu==5.5.4
@@ -49,8 +53,12 @@ pycparser==2.23
 pydantic==2.12.3
 pydantic-settings==2.11.0
 pydantic_core==2.41.4
+pydyf==0.11.0
 pyflakes==3.1.0
 Pygments==2.19.2
+pypdf==5.1.0
+pyphen==0.17.2
+pytesseract==0.3.13
 pytest==8.4.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
@@ -58,7 +66,6 @@ python-jose==3.5.0
 python-magic==0.4.27
 python-multipart==0.0.20
 pytz==2025.2
-pypdf==5.1.0
 redis==7.0.1
 reportlab==4.4.4
 requests==2.32.5
@@ -68,14 +75,18 @@ sniffio==1.3.1
 SQLAlchemy==2.0.44
 starlette==0.49.3
 structlog==25.5.0
+tinycss2==1.4.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.38.0
-#uvloop==0.22.1
+uvloop==0.22.1
 vine==5.1.0
 watchfiles==1.1.1
 wcwidth==0.2.14
+weasyprint==62.3
+webencodings==0.5.1
 websockets==15.0.1
 xlrd==2.0.2
+zopfli==0.4.0
