--- a/env.example
+++ b/env.example
@@ -1,11 +1,11 @@
-DATABASE_URL=postgresql+psycopg2://digifordb:Grz6ayTrBXPnFkwL@localhost:5432/digifor
+DATABASE_URL=postgresql+psycopg2://digifor:Grz6ayTrBXPnFkwL@localhost:5432/digifordb
 DATABASE_ECHO=False
 
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_USER=digifordb
+POSTGRES_USER=digifor
 POSTGRES_PASSWORD=Grz6ayTrBXPnFkwL
-POSTGRES_DB=digifor
+POSTGRES_DB=digifordb
 
 SERVER_IP=
 API_BASE_URL=http://172.15.2.105
